--- a/assets/scss/assets/_card.scss
+++ b/assets/scss/assets/_card.scss
@@ -1,6 +1,51 @@
 .card {
+  position: relative;
+
+  &:hover .card__bg1 {
+    top: -30px;
+    transform: rotate(-7deg);
+  }
+
+  &:hover .card__bg2 {
+    top: -10px;
+    transform: rotate(-4deg);
+  }
+
+  &__bg {
+    position: absolute;
+    max-width: 420px;
+    width: 100%;
+    height: 85px;
+    left: 18px;
+    top: -15px;
+  }
+
+  &__bg1 {
+    position: absolute;
+    width: 84%;
+    height: 85.23px;
+    background: linear-gradient(180deg, #4f5565 0%, #000000 53.65%);
+    border-radius: 20px;
+    transform: rotate(-4.5deg);
+    top: -16%;
+    transition: all 0.4s linear;
+  }
+
+  &__bg2 {
+    position: absolute;
+    width: 94%;
+    height: 67.97px;
+    background: linear-gradient(180deg, #31394d 0%, #091739 100%);
+    border-radius: 20px;
+    transform: rotate(-2.32deg);
+    top: -1%;
+    left: -0.5%;
+    transition: all 0.4s linear;
+  }
+
   &__body {
     max-width: 420px;
+    width: 100%;
     background-color: #252e42;
     box-shadow: 0px 14px 34px rgba(0, 0, 0, 0.25);
     height: 540px;
@@ -8,13 +53,18 @@
     padding: 30px 16px 30px 30px;
     margin: 0 0 30px 0;
     position: relative;
+    cursor: pointer;
+
+    // @media (max-width: 450px) {
+    //   max-width: 390px;
+    // }
 
     &::after {
       content: '';
-      width: 359px;
-      height: 56px;
+      width: 79%;
+      height: 10%;
       position: absolute;
-      bottom: 3px;
+      bottom: 1%;
       background: linear-gradient(
         180deg,
         rgba(37, 46, 66, 0) 0%,
@@ -24,34 +74,39 @@
 
     &::before {
       content: '';
-      width: 437px;
-      height: 40px;
+      width: 105%;
+      height: 7.5%;
       position: absolute;
       background: linear-gradient(
         180deg,
         rgba(37, 46, 66, 0) 0%,
         #252e42 67.19%
       );
-      top: 273px;
-      left: 161px;
+      top: 50%;
+      left: 38%;
       transform: rotate(-90deg);
       z-index: 1;
     }
   }
 
-  &__header {
-    display: flex;
-    justify-content: space-between;
+  .card__header {
     margin: 0 0 20px 0;
+  }
 
-    .header__title {
+  .header {
+    &__content {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__title {
       font-weight: 700;
       font-size: 28px;
       line-height: 34px;
       color: #ffffff;
     }
 
-    .header__btn {
+    &__btn {
       background-color: #ff8469;
       padding: 5px 10px;
       width: 54px;
@@ -101,6 +156,23 @@
         left: -35px;
         transform: translate(0, -50%);
       }
+
+      &:hover {
+        color: #ff8469;
+      }
+
+      &:hover::before {
+        background: rgba(255, 132, 105, 0.2);
+      }
+
+      &.checked:hover {
+        color: #ffffff;
+      }
+
+      &.checked::before {
+        background: url('../../assets/img/checkmark.svg') center no-repeat;
+        background-color: #ff8469;
+      }
     }
     &__title {
       font-weight: 500;
@@ -120,4 +192,13 @@
       overflow: hidden;
     }
   }
+}
+
+.checked {
+  text-decoration: line-through;
+  color: #4f5565;
+}
+
+.mouseenter {
+  color: #ffffff;
 }
