--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,8 +20,28 @@ body {
   align-items: center;
   justify-content: center;
 
+  ._bg-animation {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(
+      35.13% 50% at 50% 50%,
+      #252e42 0%,
+      #161c2e 100%
+    );
+    transition: opacity 1s ease;
+  }
+
+  &.hovered ._bg-animation {
+    opacity: 1;
+  }
+
   ._container {
     max-width: 458px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 15px;
   }
