--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,11 @@
 @import 'assets/card';
 @import 'assets/footer';
 
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 body {
   font-size: 16px;
   font-weight: 500;
@@ -19,6 +24,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 30px;
 
   ._bg-animation {
     opacity: 0;
